--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,52 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+version: 2
+jobs:
+  lint:
+    docker:
+      # specify the version you desire here
+      - image: circleci/node:10.15.3-browsers
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/mongo:3.4.4
+
+    working_directory: ~/user-data-for-fraud-prevention
+
+    steps:
+      - checkout
+
+      # install eslint
+      - run: npm install eslint
+
+      # run lint
+      - run: npm run lint
+  build:
+    docker:
+      # specify the version you desire here
+      - image: circleci/node:10.15.3-browsers
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/mongo:3.4.4
+
+    working_directory: ~/user-data-for-fraud-prevention
+
+    steps:
+      - checkout
+
+      - run: npm install
+      
+      # run build
+      - run : npm run build
+
+      # run tests!
+      - run: npm test
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
+  version: 2
+  lint_and_build:
     jobs:
-      - welcome/run
+      - lint
+      - build:
+          requires:
+            - lint
